# cmake_bin_c_cpp_gtest_conan

./: .gitignore  CMakeLists.txt  README  conan_load.cmake  options_init.cmake
cmake/: include.cmake
cmake/find/: cxxopts.cmake  lz4-external.cmake  lz4.cmake
cmake/functions/: targets.cmake
include/: palindrom.hpp
src/: CMakeLists.txt  main.cpp  palindrom.cpp
test/: CMakeLists.txt  palindrom_test.cpp  test_run.sh
